<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="password_input_error">Password is invalid</string>
    <string name="email_input_error">Email is invalid</string>
    <string name="password_matching_error">Password mismatch</string>
    <string name="sign_in">Sign In</string>
    <string name="password_support_text">Password must be at least 6 characters long</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="or">OR</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="email_hint" translatable="false">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="close">Close</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_email_for_password_reset">Enter the email address that you signed up with to reset it.</string>
    <string name="successful_resetting_password">The letter was successfully sent. Follow the instructions in it and come back to log in with a new password.</string>
</resources>