<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp">

    <com.zhigaras.login.presentation.input.EmailInput
        android:id="@+id/email_input_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        app:endIconDrawable="@drawable/baseline_clear_24"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.zhigaras.login.presentation.input.EmailInput>

    <include layout="@layout/spacer16dp" />

    <com.zhigaras.login.presentation.input.PasswordInput
        android:id="@+id/password_input_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        app:endIconDrawable="@drawable/baseline_eye_24"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.zhigaras.login.presentation.input.PasswordInput>


    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:text="@string/forgot_password" />

    <include layout="@layout/spacer16dp" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in" />

    <include
        layout="@layout/or_spacer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_with_google"
        app:icon="@drawable/google_icon"
        app:iconGravity="textStart"
        app:iconSize="30dp"
        app:iconTint="@android:color/transparent"
        app:iconTintMode="add" />

</LinearLayout>